--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/CheckoutCartSummary.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/CheckoutCartSummary.cshtml
@@ -64,6 +64,27 @@
             </div>
         </div>
     }
+    @foreach (var alteration in viewModel.ShoppingCart.PriceAlterationAmounts) {
+        <div class="product product-line row">
+            <div class="product-info">
+                <div class="product-name">
+                        <span class="product-title">@alteration.Label</span>
+                    </div>
+            </div>
+            <div class="product-info line-info">
+                <div class="product-unit-price">@* TODO: check this view *@
+                </div>
+                <div class="product-quantity">
+                </div>
+                <div class="product-line-price">
+                    <div class="product-info-label">@T("Value")</div>
+                    <div class="product-info-value">
+                        @viewModel.CurrencyProvider.GetPriceString(alteration.Amount)
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
     @* Display cart "totals" (excluding shipping) *@
 
     <div>
