Added setting to force the use of a shipping address/shipping method

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/CheckoutSettings.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/CheckoutSettings.cshtml
@@ -17,3 +17,12 @@
         </label>
     </div>
 </div>
+
+<div class="form-group">
+    <div class="checkbox-inline">
+        <label>
+            @Html.CheckBoxFor(m => m.ShippingIsRequired)
+            @T("A shipping address is required for checkout.")
+        </label>
+    </div>
+</div>
