--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Index.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Index.cshtml
@@ -53,7 +53,7 @@
 
     <label for="@Html.Id("PhonePrefix")">@T("International Phone Prefix")</label>
     <input id="@Html.Id("PhonePrefix")" type="text" name="@Html.Name("PhonePrefix")" value="@Model.PhonePrefix" class="input-large" />
-    <div class="hint"> @T("Please provide an international phone prefix, For example 0039 for Italy")</div>
+    <div class="hint"> @T("Please provide an international phone prefix, For example +39 for Italy")</div>
     <label for="@Html.Id("Phone")">@T("Phone")</label>
     <input id="@Html.Id("Phone")" type="text" name="@Html.Name("Phone")" value="@Model.Phone" class="input-large" />
     <div class="hint">@T("Please provide a phone number where we can reach you in case we need additional information. This is also required when shipping to some countries.")</div>
