--- a/src/Themes/Laser.ECommerce/Views/Addresses/index.cshtml
+++ b/src/Themes/Laser.ECommerce/Views/Addresses/index.cshtml
@@ -39,7 +39,7 @@
 
             <input id="@Html.Id("PhonePrefix")" type="text" name="@Html.Name("PhonePrefix")" value="@Model.PhonePrefix" class="input-large" placeholder="@T("International Phone Prefix")" />
 
-            <div class="hint"> @T("Please provide an international phone prefix, For example 0039 for Italy")</div>
+            <div class="hint"> @T("Please provide an international phone prefix, For example +39 for Italy")</div>
             <input id="@Html.Id("Phone")" type="text" name="@Html.Name("Phone")" value="@Model.Phone" class="input-large" placeholder="@T("Phone")" />
 
             <div class="hint">@T("Please provide a phone number where we can reach you in case we need additional information. This is also required when shipping to some countries.")</div>
