--- a/src/Modules/Laser.Orchard.Maps/Views/Parts/Map.cshtml
+++ b/src/Modules/Laser.Orchard.Maps/Views/Parts/Map.cshtml
@@ -3,7 +3,7 @@
 
 
 @{
-   Script.Require("GoogleMapsAPI").AtHead();
+    Script.Require("GoogleMapsAPI").AtHead();
 
 
 
@@ -17,7 +17,8 @@
     if (!String.IsNullOrWhiteSpace(tilesType)) {
         if (!tilesType.ToLower().Trim().StartsWith("http")) {
             usedTiles = "google.maps.MapTypeId." + tilesType;
-        } else {
+        }
+        else {
             usedTiles = tilesType;
             httpTiles = true;
             maxZoom = Model.MaxZoom > 0 ? Model.MaxZoom : maxZoom = 22;
@@ -34,65 +35,62 @@
 }
 @if (Model.Latitude > 0) {
     using (Script.Foot()) {
-    <script type="text/javascript">
-        function @("initialize" + ID + "()") {
-            var mapOptions = {
-            scaleControl: true,
-            center: new google.maps.LatLng(@Model.Latitude.ToString().Replace(",", "."),@Model.Longitude.ToString().Replace(",", ".")),
-                zoom: 15,
-                mapTypeId: @Html.Raw(!httpTiles ? usedTiles : "'OSM'")   
+        <script type="text/javascript">
+            function @("initialize" + ID + "()") {
+                var mapOptions = {
+                scaleControl: true,
+                center: new google.maps.LatLng(@Model.Latitude.ToString().Replace(",", "."),@Model.Longitude.ToString().Replace(",", ".")),
+                    zoom: 15,
+                    mapTypeId: @Html.Raw(!httpTiles ? usedTiles : "'OSM'")
 
-            @if (httpTiles) {
-                <text>,
-            mapTypeControl: false,
-            streetViewControl: false
-                </text>
-            }
-        };
-
-        var map = new google.maps.Map(document.getElementById('map_canvas-@ID'),
-    mapOptions);
                     @if (httpTiles) {
-                        //Define OSM map type pointing at the OpenStreetMap tile server
-                <text>
-        map.mapTypes.set("OSM", new google.maps.ImageMapType({
-            getTileUrl: function(coord, zoom) {
-                var usedTilesJS = "@usedTiles";
-                var values = [zoom,coord.x,coord.y];
-
-                var result = switch_url(format(usedTilesJS, zoom, coord.x, coord.y));
-                    
-                return result; //"http://tile.openstreetmap.org/" + zoom + "/" + coord.x + "/" + coord.y + ".png";
-            },
-            tileSize: new google.maps.Size(256, 256),
-            name: "OpenStreetMap",
-            maxZoom: @maxZoom
-            }));
-        </text>
+                        <text>,
+                    mapTypeControl: false,
+                    streetViewControl: false
+                        </text>
                     }
+                };
 
-                @if (!String.IsNullOrWhiteSpace(mediaUrl)) {
-        <text>var ctaLayer = new google.maps.KmlLayer({
-                    url: '@WorkContext.CurrentSite.BaseUrl@(mediaUrl)'
-                });
-                ctaLayer.setMap(map);
-        </text>
+                var map = new google.maps.Map(document.getElementById('map_canvas-@ID'), mapOptions);
+                @if (httpTiles) { //Define OSM map type pointing at the OpenStreetMap tile server
+                    <text>
+                    map.mapTypes.set("OSM", new google.maps.ImageMapType({
+                        getTileUrl: function(coord, zoom) {
+                            var usedTilesJS = "@usedTiles";
+                            var values = [zoom,coord.x,coord.y];
+                            var result = switch_url(format(usedTilesJS, zoom, coord.x, coord.y));
+                            return result; //"http://tile.openstreetmap.org/" + zoom + "/" + coord.x + "/" + coord.y + ".png";
+                        },
+                        tileSize: new google.maps.Size(256, 256),
+                        name: "OpenStreetMap",
+                        maxZoom: @maxZoom
+                    }));
+                    </text>
                 }
 
-        var marker = new google.maps.Marker({
-            map: map,
-            position: map.getCenter()
-        });
-        var infowindow = new google.maps.InfoWindow();
-        infowindow.setContent('<div style="overflow:hidden;white-space:nowrap;"><span class="map-locationinfo-marker">@(Model.LocationInfo == null ? Layout.Title : Model.LocationInfo)</span><span class="map-locationaddress-marker">@Model.LocationAddress</span></div>');
-        google.maps.event.addListener(marker, 'click', function () {
-            infowindow.open(map, marker);
-        });
-        }
+                @if (!String.IsNullOrWhiteSpace(mediaUrl)) {
+                    <text>
+                    var ctaLayer = new google.maps.KmlLayer({
+                        url: '@WorkContext.CurrentSite.BaseUrl@(mediaUrl)'
+                    });
+                    ctaLayer.setMap(map);
+                    </text>
+                }
 
-        google.maps.event.addDomListener(window, 'load', @("initialize" + ID) );
-        google.maps.event.trigger(map, 'resize');
-    </script>
+                var marker = new google.maps.Marker({
+                    map: map,
+                    position: map.getCenter()
+                });
+                var infowindow = new google.maps.InfoWindow();
+                infowindow.setContent('<div style="overflow:hidden;white-space:nowrap;"><span class="map-locationinfo-marker">@(Model.LocationInfo == null ? Layout.Title : Model.LocationInfo)</span><span class="map-locationaddress-marker">@Model.LocationAddress</span></div>');
+                google.maps.event.addListener(marker, 'click', function () {
+                    infowindow.open(map, marker);
+                });
+                google.maps.event.trigger(map, 'resize');
+            }
+
+            google.maps.event.addDomListener(window, 'load', @("initialize" + ID) );
+        </script>
     }
     <fieldset class="map">
         <legend class="map-legend">@T("Map")</legend>
