--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Shipping.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Shipping.cshtml
@@ -17,6 +17,7 @@
     Url.Action("Shipping"), FormMethod.Post, new { @id = "shipping-form" })) {
     @*serialized address data*@
     @Html.HiddenFor(m => m.SerializedAddresses)
+    @Html.HiddenFor(m => m.BillAtSameShippingAddress)
     @*Available shipping options*@
     if (Model.AvailableShippingOptions != null && Model.AvailableShippingOptions.Any()) {
         @Display.ShippingOptions(
@@ -24,7 +25,8 @@
             Country: Model.ShippingAddressVM.Country,
             ZipCode: Model.ShippingAddressVM.PostalCode,
             CurrencyProvider: Model.CurrencyProvider)
-    } else {
+    }
+    else {
         @T("No shipping option available for the selected address. Go <a herf=\"{0}\">back to configure a different one</a>.",
             Url.Action("Index", "Checkout", new { area = "Laser.Orchard.NwazetIntegration" }))
     }
