--- a/src/Themes/Laser.ECommerce/Views/ShoppingCart.cshtml
+++ b/src/Themes/Laser.ECommerce/Views/ShoppingCart.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Nwazet.Commerce.Models
+@using Nwazet.Commerce.Services
 @using Orchard.ContentManagement
 @using System.Collections.Generic
+@using Nwazet.Commerce.Extensions;
 @{
     Script.Require("jQuery");
     Script.Include("shoppingcart.js", "shoppingcart.min.js");
@@ -83,10 +85,16 @@
                                         string imageUrl = (item.ProductImage != null && item.ProductImage.MediaParts.Count > 0) ? item.ProductImage.MediaParts[0].MediaUrl : null;
                                         var contentItem = (IContent)item.Product;
                                         var product = (IProduct)item.Product;
-                                        var title = item.Title
-                                                        + (item.ProductAttributes == null || item.ProductAttributes.Count == 0
-                                                               ? "" : " (" + string.Join(", ", ((Dictionary<int, ProductAttributeValueExtended>)item.ProductAttributes).Values
-                                                                    .Select(v => v.Value + (v.ExtensionProviderInstance != null ? v.ExtensionProviderInstance.DisplayString(v.ExtendedValue) : ""))) + ")");
+                                        var title = item.Title;
+                                        var productAttributes = (IDictionary<int, ProductAttributeValueExtended>)item.ProductAttributes;
+                                        if (productAttributes != null && productAttributes.Any()) {
+                                            var additionalText = 
+                                                AttributeNameUtilities.AttributesDisplayText(productAttributes: productAttributes, product: contentItem, separator: ", ");
+                        
+                                            if (!string.IsNullOrWhiteSpace(additionalText)) {
+                                                title += "(" + additionalText + ")";
+                                            }
+                                        }
                                         var quantity = (int)item.Quantity;
                                         var unitPrice = (decimal)item.DiscountedPrice;
                                         var unitPriceOriginal = (decimal)item.OriginalPrice;
