Script using select2 as autocomplete component for UI Explicit configuration for territories that need city and/or province selection

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Territory.AdministrativeType.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Territory.AdministrativeType.cshtml
@@ -7,3 +7,12 @@
         Model.AdministrativeTypes,
         htmlAttributes: new { @class="form-control" })
 </div>
+
+<div class="form-group">
+    @Html.CheckBoxFor(m => m.HasCities)
+    @Html.LabelFor(m => m.HasCities, T("Contains cities").Text, htmlAttributes: new { @class = "forcheckbox" })
+</div>
+<div class="form-group">
+    @Html.CheckBoxFor(m => m.HasProvinces)
+    @Html.LabelFor(m => m.HasProvinces, T("Contains provinces").Text, htmlAttributes: new { @class = "forcheckbox" })
+</div>
