--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/AddressForm.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/AddressForm.cshtml
@@ -36,14 +36,23 @@
         @if (address.AddressType == AddressRecordType.ShippingAddress) {
 
             <legend>@T("Stored Shipping Address")</legend>
-        } else {
+        }
+        else {
             <legend>@T("Stored Billing Address")</legend>
         }
 
         <select id="@idlistaddress" name="@idlistaddress">
-            <option value=-1 selected title="@T("New address")">@T("New address")</option>
+            <option value=-1 title="@T("New address")">
+                @T("New address")
+            </option>
             @foreach (var ad in addressList) {
-                <option value=@ad.Id title="@ad.Honorific @ad.FirstName @ad.LastName @ad.Company">@ad.Address1 @ad.Address2 @ad.City</option>
+                <option value=@ad.Id
+                        @if (address.AddressRecord.Id == ad.Id) { <text> selected</text>}
+                        title="@(string.Join(" ",
+                            (new string[] { ad.Honorific, ad.FirstName, ad.LastName, ad.Company})
+                                .Where(s => !string.IsNullOrWhiteSpace(s))))">
+                    @(string.Join(" ", (new string[] { ad.Address1, ad.Address2, ad.City }).Where(s => !string.IsNullOrWhiteSpace(s))))
+                </option>
             }
         </select>
     </fieldset>
@@ -61,162 +70,93 @@
     <label for="@Html.Id(prefix + ".Company")">@T("Company")</label>
     <input id="@Html.Id(prefix + ".Company")" type="text" name="@Html.Name(prefix + ".Company")" value="@address.Company" class="input-large" />
 
-    @*Manage case where only 1 country is possible*@
-    @if (address.Countries.Count() == 1) {
-        <label for="@Html.Id(prefix + ".CountryId")" class="required">@T("Country: {0}", address.Country)</label>
-        @Html.Hidden(prefix + ".CountryId", address.CountryId)
-    } else {
-        <label for="@Html.Id(prefix + ".CountryId")" class="required">@T("Country")</label>
-        @Html.DropDownList(prefix + ".CountryId", selectCountries, new { id = prefix + "_CountryId", @class = "input-medium required address-input" })
-        <div class="hint">@T("Select your Country from the list.")</div>
-    }
+    <label for="@Html.Id(prefix + ".CountryId")" class="required">@T("Country")</label>
+    <select name="@Html.Name(prefix + ".CountryId")"
+            class="address-input"
+            id="@Html.Id(prefix + ".CountryId")">
+        @foreach (var item in selectCountries) {
+            <option value="@item.Value" @(item.Selected ? "selected=\"selected\"" : "\"\"")>
+                @item.Text
+            </option>
+        }
+    </select> <div class="hint">@T("Select your Country from the list.")</div>
 
-    @Html.Hidden(prefix + ".CityId", address.CityId)
     <label for="@Html.Id(prefix + ".City")" class="required">@T("City")</label>
-    @if (address.CityId >= 0) {
-        <select id="@Html.Id(prefix + ".City")"
-                class="input-large required address-input"
-                name="@Html.Name(prefix + ".City")"></select>
-    } else {
-        <input id="@Html.Id(prefix + ".City")"
-               class="input-large required address-input"
-               name="@Html.Name(prefix + ".City")" type="text"
-               value="@Model.City" />
-    }
+    @Html.Hidden(prefix + ".CityId", address.CityId)
+    <select id="@Html.Id(prefix + ".CitySelectedId")"
+            class="address-input"
+            name="@Html.Name(prefix + ".CitySelectedId")"
+            data-requiredfield="@(prefix + ".CityId")">
+        @if (address.CityId > 0) {
+            <option value="@address.CityId" selected="selected">@address.City</option>
+        }
+    </select>
+    <input type="text" id="@Html.Id(prefix + ".City")"
+           placeholder="@T("City")"
+           class="required address-input"
+           name="@Html.Name(prefix + ".City")"
+           value="@address.City" />
     <label for="@Html.Id(prefix + ".Address1")" class="required">@T("Address")</label>
     <input id="@Html.Id(prefix + ".Address1")" type="text" name="@Html.Name(prefix + ".Address1")" value="@address.Address1" class="input-xxlarge required" />
     <input id="@Html.Id(prefix + ".Address2")" type="text" name="@Html.Name(prefix + ".Address2")" value="@address.Address2" class="input-xxlarge" />
 
-    @Html.Hidden(prefix + ".ProvinceId", address.ProvinceId)
     <label for="@Html.Id(prefix + ".Province")" class="required">@T("State, province, prefecture, republic or region")</label>
-    @if (Model.ProvinceId >= 0) {
-        <select id="@Html.Id(prefix + ".Province")"
-                class="input-mini required address-input"
-                name="@Html.Name(prefix + ".Province")"></select>
-    } else {
-        <input id="@Html.Id(prefix + ".Province")"
-               class="input-mini required address-input"
-               name="@Html.Name(prefix + ".Province")" type="text"
-               value="@Model.Province" />
-    }
+    @Html.Hidden(prefix + ".ProvinceId", address.ProvinceId)
+    <select id="@Html.Id(prefix + ".ProvinceSelectedId")"
+            class="address-input"
+            name="@Html.Name(prefix + ".ProvinceSelectedId")"
+            data-requiredfield="@(prefix + ".Province")">
+        @if (address.ProvinceId > 0) {
+            <option value="@address.ProvinceId" selected="selected">@address.Province</option>
+        }
+    </select>
+    <input id="@Html.Id(prefix + ".Province")"
+           placeholder="@T("State, province, prefecture, republic or region")"
+           class="required address-input" pattern="^[-a-zA-Z].{1,}"
+           title="@T("Province, starting with a letter.")"
+           name="@Html.Name(prefix + ".Province")" type="text"
+           value="@address.Province" />
     <div class="hint">@T("Please specify the state, province, prefecture, republic or region code as appropriate. For example, 'WA' for the state of Washington in the United States.")</div>
     <label for="@Html.Id(prefix + ".PostalCode")" class="required">@T("Postal or ZIP code")</label>
     <input id="@Html.Id(prefix + ".PostalCode")" type="text" name="@Html.Name(prefix + ".PostalCode")" value="@address.PostalCode" class="input-small required" />
 </div>
 @using (Script.Foot()) {
-<script type="text/javascript">
-        $(document).ready(function () {
-            // configure the script that will dynamically load configured address settings
-            var myaddress = $('#@guid').addressConfiguration({
-                // set all instance specific information here
-                // e.g. urls for ajax calls and the jquery selectors
-                // for the different elements of the address
-                countriesInput: '#@Html.Id(prefix + ".CountryId")',
-                citiesInput: '#@Html.Id(prefix + ".City")',
-                cityId: '#@Html.Id(prefix + ".CityId")',
-                provincesInput: '#@Html.Id(prefix + ".Province")',
-                provinceId: '#@Html.Id(prefix + ".ProvinceId")',
-                getCities: {
-                    url: '@Url.Action("GetCities", "Addresses", new { area = "Laser.Orchard.NwazetIntegration" })',
-                    @if (address.AddressType == AddressRecordType.ShippingAddress) {
-                        // when the city input for the shipping address is changed, we have to reattach the
-                        // event handler used to update the billing address if the option to use the same
-                        // address is flagged
-                        <text>
-                            after: function (cityInput) {
-                                cityInput.change(function () {
-                                    if (!$("#toggle-billing-address").prop("checked")) return;
-                                    var name = cityInput.attr("name").substr(@(prefix.Length + 1));
-                                    $('input[name="@(otherPrefix + ".")' + name + '"]')
-                                        .val(cityInput.val())
-                                        .trigger('change');
-                                });
-                            }
-                        </text>
-                    }
-                },
-                getProvinces: {
-                    url: '@Url.Action("GetProvinces", "Addresses", new { area = "Laser.Orchard.NwazetIntegration" })',
-                    @if (address.AddressType == AddressRecordType.ShippingAddress) {
-                        // when the province input for the shipping address is changed, we have to reattach the
-                        // event handler used to update the billing address if the option to use the same
-                        // address is flagged
-                        <text>
-                            after: function (provinceInput) {
-                                provinceInput.change(function () {
-                                    if (!$("#toggle-billing-address").prop("checked")) return;
-                                    var name = provinceInput.attr("name").substr(@(prefix.Length + 1));
-                                    $('input[name="@(otherPrefix + ".")' + name + '"]')
-                                        .val(provinceInput.val())
-                                        .trigger('change');
-                                });
-                            }
-                        </text>
-                    }
-                },
-                isBilling: function () { return @isBillingAddress; }
-            });
+    <script type="text/javascript">
+    $(document).ready(function () {
+        var addressOptions = {
+            guid: '@guid',
+            arrayOfStoredAddresses: JSON.parse('@Html.Raw(Json.Encode(Model.ListAddress))'),
+            elementsPrefix: '@Html.Id(prefix + "_")',
+            isBillingAddress: (true @Html.Raw(address.AddressType == AddressRecordType.BillingAddress? " && true":" && false")),
 
-            // saved addresses for the user
-            var arrayOfArrays = JSON.parse('@Html.Raw(Json.Encode(Model.ListAddress))');
-            // when a different address is selected:
-            $('#@idlistaddress').on('change', function () {
-                if ($(this).val() == -1) {
-                    $('#@guid').find('input').val('');
-                    // clear what's currently populated for the address
-                    myaddress.resetAddress();
-                } else {
-                    // figure out what address is selected
-                    for (i = 0; i < arrayOfArrays.length; i++) {
-                        if (arrayOfArrays[i].Id == $(this).val()) {
-                            // country, province, city are managed by the js library
-                            myaddress.resetAddress({ }, {
-                                countryId: arrayOfArrays[i].CountryId,
-                                cityId: arrayOfArrays[i].CityId,
-                                provinceId: arrayOfArrays[i].ProvinceId,
-                                city: arrayOfArrays[i].City,
-                                province: arrayOfArrays[i].Province,
-                            });
-                            // set the fields
-                            $('#@(prefix + "_Honorific")').val(arrayOfArrays[i].Honorific);
-                            $('#@(prefix + "_FirstName")').val(arrayOfArrays[i].FirstName);
-                            $('#@(prefix + "_LastName")').val(arrayOfArrays[i].LastName);
-                            $('#@(prefix + "_Company")').val(arrayOfArrays[i].Company);
-                            $('#@(prefix + "_Address1")').val(arrayOfArrays[i].Address1);
-                            $('#@(prefix + "_Address2")').val(arrayOfArrays[i].Address2);
-                            $('#@(prefix + "_PostalCode")').val(arrayOfArrays[i].PostalCode);
-                        }
-                    }
+            countries: {
+                administrativeInfoUrl: '@Url.Action("GetAdministrativeInfo", "Addresses", new { area = "Laser.Orchard.NwazetIntegration" })',
+                selectedId: @address.CountryId,
+                select2Options: {
+                    placeholder: '@T("Select a country")',
+                    width: '100%'
                 }
-            });
-            // use a custom event to handle hiding/showing the form
-            $('#@guid').parent().on('visibilityChanged', function () {
-                // country, province, city are managed by the js library
-                myaddress.resetAddress({}, {
-                    countryId: $('#@Html.Id(prefix + ".CountryId")').val(),
-                    cityId: $('#@Html.Id(prefix + ".CityId")').val(),
-                    provinceId: $('#@Html.Id(prefix + ".ProvinceId")').val(),
-                    city: $('#@Html.Id(prefix + ".City")').val(),
-                    province: $('#@Html.Id(prefix + ".Province")').val(),
-                });
-
-                // when an address is being hidden and reset, it may fail to
-                // carry over the previous value, because some input element may
-                // be in the process of being transformed when we are assigning
-                // to it. Since when we are hiding an address it is to make it
-                // default to the other one, we can copy the values again here,
-                // after resetting its configuration, to make sure they carried
-                // over correctly.
-                $('input[name^="@(otherPrefix)."]').each(function () {
-                    var input = $(this),
-                        name = input.attr("name").substr(@(otherPrefix.Length + 1));
-                    $('input[name="@(prefix).' + name + '"]')
-                        .val(input.val())
-                        .trigger('change');
-                });
-            });
-            // on page load, set the first saved address
-            $('#@idlistaddress').val($('#@idlistaddress option:eq(1)').val()).trigger('change');
-        });
-</script>
+            },
+            cities: {
+                getUrl: '@Url.Action("citiesapi", "Addresses", new { area = "Laser.Orchard.NwazetIntegration" })',
+                selectedId: @address.CityId,
+                select2Options: {
+                    placeholder: '@T("Select a city")',
+                    width: '100%',
+                    minimumInputLength: '2'
+                }
+            },
+            provinces: {
+                getUrl: '@Url.Action("provincesapi", "Addresses", new { area = "Laser.Orchard.NwazetIntegration" })',
+                selectedId: @address.ProvinceId,
+                select2Options: {
+                    placeholder: '@T("Select a province")',
+                    width: '100%',
+                    minimumInputLength: '1'
+                }
+            }
+        };
+        buildAddressUI(addressOptions);
+    });
+    </script>
 }
